compiler/lume_parse/src/snapshots/lume_parse__tests__switch_snapshots@literal.snap
---
source: compiler/lume_parse/src/tests.rs
expression: "parse(Target :: Statement, \"switch a { 1 => 4, 2 => 6 }\")"
---
SOURCE_FILE@0..27
  EXPR_STMT@0..27
    SWITCH_EXPR@0..27
      SWITCH_KW@0..6 "switch"
      VARIABLE_EXPR@6..8
        WHITESPACE@6..7 " "
        IDENT@7..8 "a"
      WHITESPACE@8..9 " "
      LEFT_BRACE@9..10 "{"
      WHITESPACE@10..11 " "
      SWITCH_ARM@11..17
        PAT@11..12
          PAT_LITERAL@11..12
            LIT_EXPR@11..12
              LITERAL@11..12
                INTEGER_LIT@11..12 "1"
        WHITESPACE@12..13 " "
        BIG_ARROW@13..15 "=>"
        WHITESPACE@15..16 " "
        LIT_EXPR@16..17
          LITERAL@16..17
            INTEGER_LIT@16..17 "4"
      COMMA@17..18 ","
      WHITESPACE@18..19 " "
      SWITCH_ARM@19..25
        PAT@19..20
          PAT_LITERAL@19..20
            LIT_EXPR@19..20
              LITERAL@19..20
                INTEGER_LIT@19..20 "2"
        WHITESPACE@20..21 " "
        BIG_ARROW@21..23 "=>"
        WHITESPACE@23..24 " "
        LIT_EXPR@24..25
          LITERAL@24..25
            INTEGER_LIT@24..25 "6"
      WHITESPACE@25..26 " "
      RIGHT_BRACE@26..27 "}"
