compiler/lume_parse/src/snapshots/lume_parse__tests__switch_snapshots@variant_absolute_path.snap
---
source: compiler/lume_parse/src/tests.rs
expression: "parse(Target :: Statement,\n\"switch a { std::Address::V4 => 4, std::Address::V6 => 6 }\")"
---
SOURCE_FILE@0..57
  EXPR_STMT@0..57
    SWITCH_EXPR@0..57
      SWITCH_KW@0..6 "switch"
      VARIABLE_EXPR@6..8
        WHITESPACE@6..7 " "
        NAME@7..8
          IDENT@7..8 "a"
      WHITESPACE@8..9 " "
      LEFT_BRACE@9..10 "{"
      WHITESPACE@10..11 " "
      SWITCH_ARM@11..32
        PAT@11..28
          PAT_VARIANT@11..28
            PATH@11..28
              PATH_SEGMENT@11..14
                PATH_NAMESPACE@11..14
                  NAME@11..14
                    IDENT@11..14 "std"
              PATH_SEP@14..16 "::"
              PATH_SEGMENT@16..23
                PATH_TYPE@16..23
                  NAME@16..23
                    IDENT@16..23 "Address"
              PATH_SEP@23..25 "::"
              PATH_SEGMENT@25..28
                PATH_VARIANT@25..28
                  NAME@25..27
                    IDENT@25..27 "V4"
                  WHITESPACE@27..28 " "
        BIG_ARROW@28..30 "=>"
        WHITESPACE@30..31 " "
        LIT_EXPR@31..32
          LITERAL@31..32
            INTEGER_LIT@31..32 "4"
      COMMA@32..33 ","
      WHITESPACE@33..34 " "
      SWITCH_ARM@34..55
        PAT@34..51
          PAT_VARIANT@34..51
            PATH@34..51
              PATH_SEGMENT@34..37
                PATH_NAMESPACE@34..37
                  NAME@34..37
                    IDENT@34..37 "std"
              PATH_SEP@37..39 "::"
              PATH_SEGMENT@39..46
                PATH_TYPE@39..46
                  NAME@39..46
                    IDENT@39..46 "Address"
              PATH_SEP@46..48 "::"
              PATH_SEGMENT@48..51
                PATH_VARIANT@48..51
                  NAME@48..50
                    IDENT@48..50 "V6"
                  WHITESPACE@50..51 " "
        BIG_ARROW@51..53 "=>"
        WHITESPACE@53..54 " "
        LIT_EXPR@54..55
          LITERAL@54..55
            INTEGER_LIT@54..55 "6"
      WHITESPACE@55..56 " "
      RIGHT_BRACE@56..57 "}"
