compiler/lume_parse/src/snapshots/lume_parse__tests__switch_snapshots@variant_backed.snap
---
source: compiler/lume_parse/src/tests.rs
expression: "parse(Target :: Statement,\n\"switch a { Optional::Some(a) => a, Optional::None => 0 }\")"
---
SOURCE_FILE@0..56
  EXPR_STMT@0..56
    SWITCH_EXPR@0..56
      SWITCH_KW@0..6 "switch"
      VARIABLE_EXPR@6..8
        WHITESPACE@6..7 " "
        IDENT@7..8 "a"
      WHITESPACE@8..9 " "
      LEFT_BRACE@9..10 "{"
      WHITESPACE@10..11 " "
      SWITCH_ARM@11..33
        PAT@11..28
          PAT_VARIANT@11..28
            PATH@11..25
              PATH_SEGMENT@11..19
                PATH_TYPE@11..19
                  IDENT@11..19 "Optional"
              PATH_SEP@19..21 "::"
              PATH_SEGMENT@21..25
                PATH_VARIANT@21..25
                  IDENT@21..25 "Some"
            LEFT_PAREN@25..26 "("
            PAT@26..27
              PAT_IDENT@26..27
                PATH@26..27
                  PATH_SEGMENT@26..27
                    PATH_NAMESPACE@26..27
                      IDENT@26..27 "a"
            RIGHT_PAREN@27..28 ")"
        WHITESPACE@28..29 " "
        BIG_ARROW@29..31 "=>"
        VARIABLE_EXPR@31..33
          WHITESPACE@31..32 " "
          IDENT@32..33 "a"
      COMMA@33..34 ","
      WHITESPACE@34..35 " "
      SWITCH_ARM@35..54
        PAT@35..50
          PAT_VARIANT@35..50
            PATH@35..50
              PATH_SEGMENT@35..43
                PATH_TYPE@35..43
                  IDENT@35..43 "Optional"
              PATH_SEP@43..45 "::"
              PATH_SEGMENT@45..50
                PATH_VARIANT@45..50
                  IDENT@45..49 "None"
                  WHITESPACE@49..50 " "
        BIG_ARROW@50..52 "=>"
        WHITESPACE@52..53 " "
        LIT_EXPR@53..54
          LITERAL@53..54
            INTEGER_LIT@53..54 "0"
      WHITESPACE@54..55 " "
      RIGHT_BRACE@55..56 "}"
