compiler/lume_parse/src/snapshots/lume_parse__tests__switch_snapshots@wildcard.snap
---
source: compiler/lume_parse/src/tests.rs
expression: "parse(Target :: Statement, \"switch a { b => c, .. => d }\")"
---
SOURCE_FILE@0..28
  EXPR_STMT@0..28
    SWITCH_EXPR@0..28
      SWITCH_KW@0..6 "switch"
      VARIABLE_EXPR@6..8
        WHITESPACE@6..7 " "
        IDENT@7..8 "a"
      WHITESPACE@8..9 " "
      LEFT_BRACE@9..10 "{"
      WHITESPACE@10..11 " "
      SWITCH_ARM@11..17
        PAT@11..13
          PAT_IDENT@11..13
            PATH@11..13
              PATH_SEGMENT@11..13
                PATH_NAMESPACE@11..13
                  IDENT@11..12 "b"
                  WHITESPACE@12..13 " "
        BIG_ARROW@13..15 "=>"
        VARIABLE_EXPR@15..17
          WHITESPACE@15..16 " "
          IDENT@16..17 "c"
      COMMA@17..18 ","
      WHITESPACE@18..19 " "
      SWITCH_ARM@19..26
        PAT@19..21
          PAT_WILDCARD@19..21
            DOT_DOT@19..21 ".."
        WHITESPACE@21..22 " "
        BIG_ARROW@22..24 "=>"
        VARIABLE_EXPR@24..26
          WHITESPACE@24..25 " "
          IDENT@25..26 "d"
      WHITESPACE@26..27 " "
      RIGHT_BRACE@27..28 "}"
